# BC-QACL-ATD

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: demo_synthetic.yaml  example_pa_30_80GHz.yaml  paper_repro.yaml
docs/: PORTING_PLAN.md  data.md
examples/: README.md
examples/demo_data/: driver_demo.s4p  loadpull_demo.xlsx  power_demo.s4p
src/bcqacl_atd/: __init__.py  cli.py  config.py  data_io.py  flow.py  lb_law.py  model.py  recalibrate.py
src/bcqacl_atd/app/: __init__.py  wizard.py
src/bcqacl_atd/kernels/: Cal_0423.py  Cal_0504.py  Cal_0509.py  Cal_0510.py  Cal_0511v3.py  Cal_0520.py  Cal_0521.py  Cal_0521_v2.py  Cal_0524_speed.py  Cal_0529_speed.py  Cal_0529_v2.py  TF_Cal_S6P_Predicting.py  TF_Cal_S6P_Predicting_0504.py  VCL_length_calculator.py  __init__.py  bilinear_L_predictor.py  fit_simple_rounded_from_fit_data_20260511.py  optimize_predicted_pa_cascade_cmaes.py  optimize_predicted_pa_global_anchor_objective_cal0521_v2.py  optimize_predicted_pa_global_center_band.py  optimize_predicted_pa_global_center_band_cal0521.py  optimize_predicted_pa_global_relative_3db_len480_pareto_cal0529_speed.py  optimize_predicted_pa_global_relative_3db_len485_pareto_cal0524_speed.py  optimize_predicted_pa_local_30_80_cal0521_v2.py  optimize_predicted_pa_local_anchor_range_cal0521.py  optimize_predicted_pa_local_anchor_range_cal0521_v2.py  optimize_predicted_pa_local_relative_3db_cal0521_v2.py  run_pa_synthesis_pipeline.py  (+11 more)
tests/: test_core.py
(+8 files in other folders)
